--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a id="logo link" href="index.html">
+        <a id="logo-link" href="index.html">
             <img class="logo" src="images/brownrafting.jpeg" alt="Oath of Rafting Logo">
         </a>
         <nav>
@@ -52,21 +52,21 @@
         <a class='shop' href="rivers.html">Shop Now</a>
     </section>
     </main>
+    <footer>
+        <p>Oath of Rafting &copy; 2025 - Dawson Robinson</p>
+        <p><a href="site-planning-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
-<footer>
-    <p>Oath of Rafting &copy; 2025 - Dawson Robinson</p>
-    <p><a href="site-planning-rafting.html">Site Plan</a></p>
-    <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
-        <a href="https://facebook.com">
-            <img src="images/facebook.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
-    </div>
-</footer>
 </html>
