--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oath of Rafting | Home</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo-link" href="index.html">
-            <img class="logo" src="images/brownrafting.jpeg" alt="Oath of Rafting Logo">
+            <img class="logo" src="images/icon.png" alt="Oath of Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -22,8 +24,8 @@
             <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Buy our equpmeant at Oath of Rafting</h4>
+            <h1 class="home">Have An Adventure</h1>
+            <h4 class="home">Buy our equpmeant at Oath of Rafting</h4>
             <div class='button-box'>
                 <a class='shop' href="contactus.html">Shop Now</a>
             </div>
@@ -45,6 +47,7 @@
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Protection</h2>
         </section>
+        <div id="background"></div>
     <img class="canyon" src="images/canyon.jpg" alt="Canyon River">
     <section class="msg">
         <h2>More Than Just Stuff</h2>
@@ -57,16 +60,17 @@
         <p><a href="site-planning-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
