--- a/wdd130/wwr/site-planning-rafting.html
+++ b/wdd130/wwr/site-planning-rafting.html
@@ -31,7 +31,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/brownrafting.jpeg" alt="Logo image" />
+    <img src="images/icon.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/2f1000-c68549-63a375-204e4a"
-      target="_blank">https://coolors.co/2f1000-c68549-63a375-204e4a</a>
+    <a href="https://coolors.co/f7eade-42271c-0b3d22-000000"
+      target="_blank">https://coolors.co/f7eade-42271c-0b3d22-000000</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#2F1000</td>
-        <td class="secondary">#C68549</td>
-        <td class="accent1">#63A375</td>
-        <td class="accent2">#122B1A</td>
+        <td class="primary">#F7EADE</td>
+        <td class="secondary">#42271C</td>
+        <td class="accent1">#0B3D22</td>
+        <td class="accent2">#000000</td>
       </tr>
     </table>
 
