--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -8,7 +8,7 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="wwr/index.html">White Water Rafting website</a>
-    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+    <a href="wwr/site-planning-rafting.html">White Water Rafting Siteplan</a>
     <a href="positionig.html">Positioning Activity</a>
     <a href="#">Personal Website</a>
     <a href="#">Personal Siteplan</a>
@@ -20,7 +20,7 @@
     This is me
 </h2>
 <body>
-    <img src="Idaho Me.jpg" alt="Me">
+    <img src="myimage.jpg" alt="Me">
 </body>
 <p>
     Hello, I'm Dawson Robinson amd I enjoy video games, tabletop games, playing my bass guitar.
