--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -25,7 +25,7 @@
         </div>
         <section id="hero-msg">
             <h1 class="home">Have An Adventure</h1>
-            <h4 class="home">Buy our equpmeant at Oath of Rafting</h4>
+            <h4 class="below_home">Buy our equpmeant at Oath of Rafting</h4>
             <div class='button-box'>
                 <a class='shop' href="contactus.html">Shop Now</a>
             </div>
