--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="content">
     <header>
-        <a id="logo-link" href="index.html">
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/icon.png" alt="Oath of Rafting Logo">
         </a>
         <nav>
@@ -32,17 +32,17 @@
         </section>
     </div>
     <main class="home-grid">
-        <section class="rafts-card">
+        <section class="card">
             <img class="card-img" src="images/rafts.jpg" alt="Rafts">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rafts</h2>
         </section>
-        <section class="oars-card">
+        <section class="card">
             <img class="card-img" src="images/oars.jpg" alt="Oars">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Oars</h2>
         </section>
-        <section class="protection-card">
+        <section class="card">
             <img class="card-img" src="images/protection.jpg" alt="Protection">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Protection</h2>
