--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -9,7 +9,7 @@
     <a href="index.html">Home</a>
     <a href="wwr/index.html">White Water Rafting website</a>
     <a href="wwr/site-planning-rafting.html">White Water Rafting Siteplan</a>
-    <a href="positionig.html">Positioning Activity</a>
+    <a href="positioning_exersise/positioning/positioning.html">Positioning Activity</a>
     <a href="#">Personal Website</a>
     <a href="#">Personal Siteplan</a>
 </nav>
