--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -27,22 +27,22 @@
             <h1 class="home">Have An Adventure</h1>
             <h4 class="below_home">Buy our equpmeant at Oath of Rafting</h4>
             <div class='button-box'>
-                <a class='shop' href="contactus.html">Shop Now</a>
+                <a class='shop1' href="contactus.html">Shop Now</a>
             </div>
         </section>
     </div>
     <main class="home-grid">
-        <section class="card">
+        <section class="card-raft">
             <img class="card-img" src="images/rafts.jpg" alt="Rafts">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rafts</h2>
         </section>
-        <section class="card">
+        <section class="card-oars">
             <img class="card-img" src="images/oars.jpg" alt="Oars">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Oars</h2>
         </section>
-        <section class="card">
+        <section class="card-protection">
             <img class="card-img" src="images/protection.jpg" alt="Protection">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Protection</h2>
@@ -52,7 +52,7 @@
     <section class="msg">
         <h2>More Than Just Stuff</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. Our equpmeant is a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='shop' href="rivers.html">Shop Now</a>
+        <a class='shop2' href="rivers.html">Shop Now</a>
     </section>
     </main>
     <footer>
