second raft page

--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="about_our products.html">Products</a>
             <a href="site-planning-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -27,7 +27,7 @@
             <h1 class="home">Have An Adventure</h1>
             <h4 class="below_home">Buy our equpmeant at Oath of Rafting</h4>
             <div class='button-box'>
-                <a class='shop1' href="contactus.html">Shop Now</a>
+                <a class='shop1' href="shop.html">Shop Now</a>
             </div>
         </section>
     </div>
@@ -52,7 +52,7 @@
     <section class="msg">
         <h2>More Than Just Stuff</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. Our equpmeant is a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='shop2' href="rivers.html">Shop Now</a>
+        <a class='shop2' href="shop.html">Shop Now</a>
     </section>
     </main>
     <footer>
