another link fix

--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about_our products.html">Products</a>
+            <a href="about_our_products.html">Products</a>
             <a href="site-planning-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
