--- a/wdd130/wwr/site-planning-rafting.html
+++ b/wdd130/wwr/site-planning-rafting.html
@@ -95,7 +95,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="about_our products.html">Products</a>
+      <a href="about_our_products.html">Products</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
