--- a/wdd130/personal/site-plan.html
+++ b/wdd130/personal/site-plan.html
@@ -194,21 +194,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The Home page will have brief explanations and links to the other pages.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img class="wireframe" src="images/wireframe_1.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This page will describe the necessary info for step 1 and give a few options.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class="wireframe" src="images/wireframe_2.png" alt="step 1 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This page will describe the necessary info for step 2 and give a few options.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img class="wireframe" src="images/wireframe_3.png" alt="step 2 wireframe">
     </main>
   
 
