--- a/wdd130/wwr/about_our_products.html
+++ b/wdd130/wwr/about_our_products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About our Products</title>
+    <title>Oath of Rafting | About our Products</title>
     <link rel="stylesheet" href="styles/about_our_products.css">
 </head>
 <body>
