--- a/wdd130/personal/site-plan.html
+++ b/wdd130/personal/site-plan.html
@@ -80,9 +80,12 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="index.html">Home</a>
+        <a href="step_1.html">Step 1</a>
+        <a href="step_2.html">Step 2</a>        
+        <a href="doesn't_exist_yet">Step 3</a>
+        <a href="doesn't_exist_yet">Step 4</a>
+        <a href="doesn't_exist_yet">Step 5</a>
       </nav>
       <hr>
       <h2>
