--- a/wdd130/personal/index.html
+++ b/wdd130/personal/index.html
@@ -15,9 +15,9 @@
             <a href="index.html">Home</a>
             <a href="step_1.html">Step 1 Species</a>
             <a href="step_2.html">Step 2 Class</a>
-            <a href="doesn't_exist_yet">Step 3 Stats</a>
-            <a href="doesn't_exist_yet">Step 4 Background</a>
-            <a href="doesn't_exist_yet">Step 5 Equip & Spells</a>
+            <a href="step_3.html">Step 3 Stats</a>
+            <a href="step_4.html">Step 4 Background</a>
+            <a href="step_5.html">Step 5 Equip & Spells</a>
     </header>
     <div id="hero">
         <div id="hero-box">
@@ -35,35 +35,37 @@
             started you can select the step you’re on or missed below. Offical content can be found in the rule books or at Dndbeyond.com.
         </p>
         <img id="example_sheet" src="images/sample_character_sheet.png" alt="example character sheet">
-        <p id="1">
+    <main id="grid">
+        <img id="species" src="images/half-elf.jpg" alt="species">
+        <p id="p1">
             Step 1 is picking your character’s species. A species or race is what a person is. Are they a magical elf, 
             a loud dwarf or are they an unoriginal human. This step sets up what you are and what you look like.
         </p>
-        <img id="species" src="images/half-elf.jpg" alt="species">
-        <p id="2">
+        <p id="p2">
             Step 2 will be picking your character’s class. A class is a person’s skill, what they trained to become. Are they 
             a brave knight ready to fight evil, a sneaky thief just looking for his next gold coin, or a powerful wizard 
             looking for knowledge. This step sets up a lot of what your character can do and what they’re good at.
         </p>
         <img id="class" src="images/dragonborn.jpg" alt="class">
-        <p id="3">
+        <img id="stats" src="images/stats.jpg" alt="stats">    
+        <p id="p3">
             Step 3 will be setting up your character’s stats. Each character is different, some are stronger, some are quicker and 
             some are smarter. Your character’s stats will change how effectively your character can swing a sword, sneak around, 
             or recall information.
         </p>
-        <img id="stats" src="images/stats.jpg" alt="stats">    
-        <p id="4">
+        <p id="p4">
             Step 4 will have you pick a background and help you figure out your character’s personality. 
             Your character’s background is about where your character came from, what decisions lead your character to where or 
             who he is, what leads him to make new decisions.
         </p>
         <img id="background" src="images/background.jpg" alt="background">
-        <p id="5">
+        <img id="equip" src="images/equipment.jpg" alt="equipment">
+        <p id="p5">
             Step 5 will talk about your equipment and spells. Not all characters 
             fight with a sword or staff, choosing your equipment can get you some helpful stuff, but also some story behind your 
             character. Not all characters use magic but if they do, they will get to pick what spells they cast.
         </p>
-        <img id="equip" src="images/equipment.jpg" alt="equipment">
+    </main>
     <footer>
         <p>Simply Character &copy; 2025</p>
         <p>Character content can be found in offical D&D books and on Dndbeyond.com</p>
