--- a/wdd130/personal/site-plan.html
+++ b/wdd130/personal/site-plan.html
@@ -81,11 +81,11 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="index.html">Home</a>
-        <a href="step_1.html">Step 1</a>
-        <a href="step_2.html">Step 2</a>        
-        <a href="doesn't_exist_yet">Step 3</a>
-        <a href="doesn't_exist_yet">Step 4</a>
-        <a href="doesn't_exist_yet">Step 5</a>
+        <a href="step_1.html">Step 1 Species</a>
+        <a href="step_2.html">Step 2 Class</a>
+        <a href="step_3.html">Step 3 Stats</a>
+        <a href="step_4.html">Step 4 Background</a>
+        <a href="step_5.html">Step 5 Equip & Spells</a>
       </nav>
       <hr>
       <h2>
