--- a/wdd130/personal/step_2.html
+++ b/wdd130/personal/step_2.html
@@ -15,9 +15,9 @@
             <a href="index.html">Home</a>
             <a href="step_1.html">Step 1 Species</a>
             <a href="step_2.html">Step 2 Class</a>
-            <a href="doesn't_exist_yet">Step 3 Stats</a>
-            <a href="doesn't_exist_yet">Step 4 background</a>
-            <a href="doesn't_exist_yet">Step 5 equip & Spells</a>
+            <a href="step_3.html">Step 3 Stats</a>
+            <a href="step_4.html">Step 4 Background</a>
+            <a href="step_5.html">Step 5 Equip & Spells</a>
     </header>
         <p id="intro">
             Step 2 will be picking your character’s class. A class is a person’s skill, what they trained to become. 
