--- a/wdd130/personal/index.html
+++ b/wdd130/personal/index.html
@@ -18,11 +18,13 @@
             <a href="step_3.html">Step 3 Stats</a>
             <a href="step_4.html">Step 4 Background</a>
             <a href="step_5.html">Step 5 Equip & Spells</a>
+        </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/dragon_hero_image.png" alt="dragon">
         </div>
+    </div>
         <h1>
             Simply Character
         </h1>
