--- a/wdd130/personal/step_1.html
+++ b/wdd130/personal/step_1.html
@@ -18,6 +18,7 @@
             <a href="step_3.html">Step 3 Stats</a>
             <a href="step_4.html">Step 4 Background</a>
             <a href="step_5.html">Step 5 Equip & Spells</a>
+        </nav>
     </header>
     <h1>
         Step 1: Species
