--- a/wdd130/personal/index.html
+++ b/wdd130/personal/index.html
@@ -38,7 +38,7 @@
         </p>
         <img id="example_sheet" src="images/sample_character_sheet.png" alt="example character sheet">
     <main id="grid">
-        <img id="species" src="images/half-elf.jpg" alt="species">
+        <img id="species" src="images/species.png" alt="species">
         <p id="p1">
             Step 1 is picking your character’s species. A species or race is what a person is. Are they a magical elf, 
             a loud dwarf or are they an unoriginal human. This step sets up what you are and what you look like.
@@ -48,8 +48,8 @@
             a brave knight ready to fight evil, a sneaky thief just looking for his next gold coin, or a powerful wizard 
             looking for knowledge. This step sets up a lot of what your character can do and what they’re good at.
         </p>
-        <img id="class" src="images/dragonborn.jpg" alt="class">
-        <img id="stats" src="images/stats.jpg" alt="stats">    
+        <img id="class" src="images/classes.png" alt="class">
+        <img id="stats" src="images/stats.png" alt="stats">    
         <p id="p3">
             Step 3 will be setting up your character’s stats. Each character is different, some are stronger, some are quicker and 
             some are smarter. Your character’s stats will change how effectively your character can swing a sword, sneak around, 
