--- a/wdd130/personal/step_1.html
+++ b/wdd130/personal/step_1.html
@@ -36,7 +36,7 @@
             the common language.<br><b>Lineages,</b> some species come from different lineages or sub-species which give a few more abilities.
         </p>
     <h1>
-        examples:
+        Examples:
     </h1>
     <main id="grid">
         <img id="dwarf" src="images/dwarf.png" alt="dwarf">
