--- a/wdd130/personal/step_3.html
+++ b/wdd130/personal/step_3.html
@@ -21,6 +21,59 @@
           </nav>
     </header>
 
+    <h1>
+      Step 3: Stats
+  </h1>
+      <p id="intro">
+          Each Character has 6 Stats, these stats decide bonuses to rolls on skill checks and saving throws. 
+          the simpilest way to choose stats is to take the numbers 15, 14, 13, 12, 10, and 8, and choose which 
+          stat to put each number in. A stat will calculate the modifier, for 10 and 11 the modifieris 0 but 
+          every two numbers going up increases the modifier by one and every two numbers going down adds a 
+          negative one, which means 12 and 13 would be +1, 14 and 15 would be +2, and 8 and 9 would be -1.
+          To calculate a skill or saving throw bonus simply add the modifier for the stat it uses and your 
+          proficiency bonus if proficent. Below are the six stats and a little about them:
+      </p>
+  <main id="grid">
+      <img id="str" src="images/str.png" alt="Strength">
+      <p id="p1">
+        the Strength stat represents a character's physical power and ability to exert force. A higher 
+        Strength score means your character is stronger and more capable in physical tasks It's crucial 
+        for characters who rely on brute strength, like fighters, barbarians, and paladins.
+      </p>
+      <img id="dex" src="images/dex.png" alt="Dexterity">
+      <p id="p2">
+        Dexterity represents a character's agility, reflexes, and balance. Dexterity is the cornerstone 
+        of stealthy or nimble characters. It's vital for characters who rely on finesse, speed, or 
+        ranged combat—like rogues, rangers, and monks.
+      </p>
+      <img id="con" src="images/cons.png" alt="Constitution">
+      <p id="p3">
+        Constitution represents a character's physical resilience, endurance, and overall health. 
+        Constitution is universally important because everyone benefits from staying alive longer. 
+        It's crucial for characters who need to withstand damage or survive tough conditions—such as 
+        barbarians, clerics, and druids
+      </p>
+      <img id="int" src="images/int.png" alt="Intelligence ">
+      <p id="p4">
+        Intelligence represents a character's mental acuity, analytical ability, and depth of knowledge. 
+        A high Intelligence score reflects a character's sharp mind and expertise in academic or magical 
+        fields. It's particularly important for classes like wizards and artificers, which rely on Intelligence 
+        for spellcasting.
+      </p>
+      <img id="wis" src="images/wis.png" alt="Wisdom">
+      <p id="p5">
+        Wisdom represents a character's intuition, perceptiveness, and connection to the world around them. 
+        Characters with high Wisdom often excel at noticing details, understanding others, and connecting 
+        with the natural or spiritual world. It plays a key role in many situations that require awareness or 
+        spiritual insight. Wisdom is especially crucial for classes like clerics, druids, and rangers.
+      </p>
+      <img id="cha" src="images/cha.png" alt="Charisma">
+      <p id="p6">
+        Charisma represents a character's charm, confidence, and ability to influence others. High Charisma 
+        reflects a magnetic and confident presence. It's a vital stat for characters who rely on persuasion, 
+        social interactions, or sheer force of personality—such as bards, sorcerers, paladins, and warlocks.
+      </p>
+  </main>
 
     <div id="myNav" class="overlay">
 
