--- a/wdd130/personal/step_4.html
+++ b/wdd130/personal/step_4.html
@@ -21,6 +21,36 @@
           </nav>
     </header>
 
+    <h1>
+      Step 4: Background
+  </h1>
+      <p id="intro">
+        A backstory and characteristics makes a character unique. Start by picking a background based
+        on who your character was or is. Your background will give you a few extra proficiencies and
+        traits. Each background has permade permade personality traits, ideals, bonds and flaws to 
+        get you thinking about who your character is. if youll be using these pick two personality 
+        traits and one each for the other three. Also think what your character looks like.
+      </p>
+  <h1>
+      Example backgrounds:
+  </h1>
+  <main id="grid">
+      <img id="soldier" src="images/soldier.png" alt="soldier">
+      <p id="p1">
+        The Soldier background in D&D represents a character with a history of military service. These 
+        individuals have honed their combat skills and experienced the discipline, camaraderie, and trials of army life.
+      </p>
+      <img id="sage" src="images/sage.png" alt="sage">
+      <p id="p2">
+        The Sage background in D&D represents a character who has dedicated their life to the pursuit 
+        of knowledge. These individuals are scholars, researchers, or experts in various fields of study.
+      </p>
+      <img id="criminal" src="images/criminal.png" alt="criminal">
+      <p id="p3">
+        The Criminal background in D&D is for characters with a history of breaking the law.
+      </p>
+  </main>
+
     <div id="myNav" class="overlay">
 
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
