--- a/wdd130/personal/step_5.html
+++ b/wdd130/personal/step_5.html
@@ -21,6 +21,37 @@
           </nav>
     </header>
 
+    <h1>
+      Step 5: Equipment & Spells
+  </h1>
+      <p id="intro">
+        Each class and background both have a list of items to choose from for your starter
+        Equipment. When choosing it's important to think of what your character can use and 
+        what he would use. Each weapon has different benefits and disadvantages, be sure to 
+        read your weapons triats. Depending on your class you will also get a number of spells
+        read the spell casting ability in the class featuters section of your class to learn more
+        about how many spells you know and how many you can cast.
+      </p>
+  <h1>
+      Weapon Examples:
+  </h1>
+  <main id="grid">
+      <img id="longsword" src="images/longsword.png" alt="longsword">
+      <p id="p1">
+        The longsword is a favorite among characters who value strength and durability, such as 
+        fighters, paladins, and clerics. Its ability to deliver heavy blows makes it a reliable choice in combat.
+      </p>
+      <img id="dagger" src="images/dagger.png" alt="dagger">
+      <p id="p2">
+        The dagger is a weapon often chosen by rogues, spellcasters, and anyone who values having a reliable, 
+        backup tool at hand. Are you equipping your character with one.
+      </p>
+      <img id="quarterstaff" src="images/quarterstaff.png" alt="Quarterstaff">
+      <p id="p3">
+        The Quarterstaff is popular among spellcasters like wizards and monks, who often rely on its simplicity 
+        and functionality. It's a great weapon for anyone seeking a balance of defense and offense in combat.
+      </p>
+  </main>
 
     <div id="myNav" class="overlay">
 
