--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -10,8 +10,8 @@
     <a href="wwr/index.html">White Water Rafting website</a>
     <a href="wwr/site-planning-rafting.html">White Water Rafting Siteplan</a>
     <a href="positioning_exersise/positioning/positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
-    <a href="#">Personal Siteplan</a>
+    <a href="personal/index.html">Personal Website</a>
+    <a href="personal/site-plan.html">Personal Siteplan</a>
 </nav>
 <h1>
     Dawson Robinson
